# soem-ng

./: .gitignore  CMakeLists.txt  LICENSE  README.md  options.h.in  version.h.in
cmake/: CYGWIN.cmake  Darwin.cmake  FindPCAP.cmake  Linux.cmake  Windows.cmake  rt-kernel.cmake
cmake/Platform/: rt-kernel.cmake
cmake/toolchain/: rt-kernel-arm9e.cmake  rt-kernel-imx53.cmake
include/: ec_api.h
src/: CMakeLists.txt  alloc.c  alloc.h  config.c  config.h  ec_types.h  eeprom.c  eeprom.h  frame.c  frame.h  log.h  net.c  net.h  nic.c  nic.h  osal.h  sii.c  sii.h  slave.c  slave.h
src/osal/cygwin/: cc.h  osal.c
src/osal/darwin/: bpf.c  osal.c
src/osal/linux/: CMakeLists.txt  socket.c
src/osal/rt-kernel/: assert.h  cc.h  osal.c  stubs.c
src/osal/windows/: cc.h  pcap.c
test/: CMakeLists.txt  ec_test.cpp  test_alloc.cpp  test_frame.cpp
util/: CMakeLists.txt
util/slaveinfo/: CMakeLists.txt  slaveinfo.c
